# 28hm

./: additional_File.py  db.sqlite3  manage.py  pyproject.toml  utils.py
OwnAvito/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  urls_ads.py  urls_category.py  urls_user.py  views.py
ads/migrations/: 0001_initial.py
