[tool.poetry]
name = "ownavito"
version = "0.1.0"
description = ""
authors = ["PulserCoder <92484659+PulserCoder@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
